<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_sort">Sort</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="address">Address :</string>
    <string name="app_desc1">This app displays the list of popular books. You can see the full description of each book. You can also add a book to favourites. The app also has other screens such as a Profile page which will tell you about the developer that made the app and an About App page which will tell you about the app.</string>
    <string name="app_desc2">Enjoy the world of books with this app.</string>

</resources>
