<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutAppFragment">

    <TextView
        android:id="@+id/txtAboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#111111"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtAppDesc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc1"
        android:layout_below="@id/txtAboutApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtAppDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_desc2"
        android:layout_below="@id/txtAppDesc1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>